# Mardown-rs

./: .gitignore  Cargo.toml  README.md  llm.md
src/: code.rs  code_tests.rs  main.rs  md.rs  system_prompt.txt
src/models/: claude.rs  deepseek.rs  google.rs  mod.rs  openai.rs
