[package]
name = "mdrs"
version = "0.1.0"
edition = "2024"
authors = ["Farhan Ali Raza <farhanalirazaazeemi@gmail.com>"]
description = "A fast and efficient command-line tool that recursively scans directories and creates a single markdown file containing the contents of all files"
license = "MIT"

[[bin]]
name = "mdrs"
path = "src/main.rs"

[dependencies]
walkdir = "2.4"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
